# papaw

./: .gitmodules  .travis.yml  COPYING  Dockerfile  README  README.md  azure-pipelines.yml  ci.sh  crasher.c  exe.c  meson.build  meson_options.txt  miniz_export.h  papaw.c  papaw.h  papawify  papawify.in  unpapawify  unpapawify.in
.github/workflows/: release.yml
ci/: build.sh  ci.sh  putser.c  sleeper.c  test.sh
